# cdRipper

./: .gitignore  README.md  pyproject.toml  setup.py
cdRipper/: __init__.py  getMetaData.py  ripCD.py  version.py
src/cdripper/: __init__.py  cli.py  disc_metadata.py  disc_select.py  get_metadata.py  metadata.py  ripcd.py  ripper.py  udev_watchdog.py  utils.py
src/cdripper/systemtray/: main.py  progress.py  utils.py  widgets.py
src/cdripper/ui/: dialogs.py  main.py  progress.py  utils.py
src/cdripper/watchdogs/: __init__.py  base.py  linux.py  windows.py
