[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "cdripper"
version = "0.4.0"
description = "Package for automagically rip and tag CDs when inserted"
readme = "README.md"
authors = [
    {name="Kyle R. Wodzicki", email="krwodzicki@gmail.com"},
]

classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Audio",
]

requires-python = ">=3.10"

dependencies = [
    "PyQt5",
    "discid",
    "pyudev",
    "musicbrainzngs",
]

[project.urls]
Homepage = "https://github.com/kwodzicki/cdRipper"
test = "https://test.com"

[project.scripts]
# cdripper = "cdripper.cli:main"
cdripper = "cdripper.systemtray.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

