[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "cdripper"
version = "3.2.0"
description = "Package for automagically rip and tag CDs when inserted"
readme = "README.md"
authors = [
    {name="Kyle R. Wodzicki", email="krwodzicki@gmail.com"},
]

classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Audio",
]

requires-python = ">=3.10"

dependencies = [
    "PyQt5",
    "discid",
    "musicbrainzngs",
    "pyudev ; platform_system == 'Linux'",
    "pywin32 ; platform_system == 'Windows'",
    "WMI ; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/kwodzicki/cdRipper"

[project.scripts]
# cdripper = "cdripper.cli:main"
cdripper = "cdripper.ui.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cdripper = ['resources/*.png', 'resources/*.ico']
